--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/nkuwk/k513x" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/nkuwk/b11n" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/nkuwk/c12v" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/nkuwk/g8w" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/nkuwk/k4u" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/nkuwk/t12g" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/nkuwk/q3g" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/nkuwk/f10n" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/nkuwk/e9v" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/nkuwk/y7a" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/nkuwk/b5o" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/dtvah/l513u" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/dtvah/g11b" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/dtvah/o12t" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/dtvah/v8l" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/dtvah/w4h" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/dtvah/t12l" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/dtvah/h3j" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/dtvah/f10h" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/dtvah/v9n" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/dtvah/y7q" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/dtvah/x5r" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242776.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/AAA-2-320x200.jpg"><p align="center">【最新疫情7.9】香港出现第三波感染</p></a>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242776.md#1" title="【最新疫情7.9】香港出现第三波感染""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/AAA-2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242765.md#1" title="被捕香港大纪元员工：遭警威胁送中活摘""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/DSC_6510-1-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241863.md#1" title="【一线采访】贵州铜仁山体滑坡 村庄被埋""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/IMG_1400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/4/n12232591.md#1" title="【独家】内部文件曝中共脸书账号的秘密""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/Screen-Shot-2020-07-04-at-8.52.27-PM-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://qtwlwd303.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242776.md#1">【最新疫情7.9】香港出现第三波感染</a><br>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243056.md#1">湖北江西现河堤溃口 千岛湖泄洪量达76个西湖</a><br>
+:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243124.md#1">田云: 709大抓捕五周年 世界应制止中共行恶</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243374.md#1">《被消失的香港》 港漫画家：用铅笔参与抗争</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242776.md#1">【最新疫情7.9】香港出现第三波感染</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243056.md#1">湖北江西现河堤溃口 千岛湖泄洪量达76个西湖</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243364.md#1">NASA新装置帮你防止触碰脸部</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243354.md#1">美FDA批准皮下注射药物 可在家治疗乳癌</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243347.md#1">三份研究揭基因编辑造成大问题</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243335.md#1">新型超快胰岛素生效速度提升四倍</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239553.md#1">贵州大巴21死 传司机是退伍军人、拆迁户</a><br>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12240842.md#1">上海暴雨“中国第一高楼”多层楼漏水严重</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 359,537,564 人
+!共 359,539,809 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
